tree-sitter-beans/grammar.js
    source_file: ($) => seq(optional($.package_declaration), repeat($._top_level)),

    // `package money`. The name is the package's own, not the last segment of
    // the path that reaches it: `shop/transport_v2/` may declare
    // `package transport`.
    _top_level: ($) => choice($.import_declaration, $._declaration),

    doc_comment: (_) => token(seq('///', /[^/].*/)),
    line_comment: (_) => token(seq('//', /.*/)),
    // block_comment is an external token: `/* /* */ */` nests.

    // ---- imports ----------------------------------------------------------
    _modifier: ($) =>
      choice(
        $.visibility_modifier,
        $.extern_modifier,
        $.feature_modifier,
        $.align_modifier,
        $.unique_modifier,
        $.packed_modifier,
        $.opaque_modifier,
        $.static_modifier,
        $.override_modifier,
      ),

    visibility_modifier: (_) => 'pub',
    function_declaration: ($) =>
      prec.right(seq(
        repeat($._modifier),
        'fn',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        field('parameters', $.parameter_list),
        optional(seq('->', field('return_type', $._type))),
        // `pub extern "C" fn add(...) -> i32 as "beans_wasm_add"` — the
        // exported C symbol name.
        optional(seq('as', field('export_name', $.string_literal))),
        optional(field('body', $.block)),
      )),

    parameter_list: ($) => seq('(', optional(commaList($.parameter)), ')'),

    parameter: ($) =>
      seq(
        optional(field('mode', $.parameter_mode)),
        field('name', $.identifier),
        ':',
        field('type', $._type),
      ),

    class_declaration: ($) =>
      seq(
        repeat($._modifier),
        'class',
        field('name', $.type_identifier),
        optional(field('type_parameters', $.type_parameters)),
        optional(seq('extends', field('superclass', $._type))),
        optional(field('interfaces', $.implements_clause)),
        field('body', $.declaration_body),
      ),

    // A class lists its interfaces with commas: `implements Tagged, Counted`.
    // Generic bounds use `&` instead — see type_parameter.
    interface_declaration: ($) =>
      seq(
        repeat($._modifier),
        'interface',
        field('name', $.type_identifier),
        optional(field('type_parameters', $.type_parameters)),
        optional(seq('extends', field('superclass', $.type_bounds))),
        field('body', $.declaration_body),
      ),

    declaration_body: ($) =>
      seq('{', repeat(choice($.field_declaration, $.function_declaration)), '}'),

    // A field takes `pub` and `align(N)` — nothing else, so `packed: Bytes`
    // stays a field named `packed`.
    field_declaration: ($) =>
      seq(
        optional($.visibility_modifier),
        optional($.align_modifier),
        field('name', $.identifier),
        ':',
        field('type', $._type),
        optional(seq('=', field('default', $._expression))),
      ),

    _type: ($) =>
      choice(
        $.primitive_type,
        $.generic_type,
        $.type_identifier,
        $.scoped_type_identifier,
        $.function_type,
        $.array_type,
      ),

    // No token precedence here on purpose. `int` is a prefix of `interface`,
    // and raising `int` above the other keywords makes the keyword lexer stop
    // at `int` and never reach `interface`.
    primitive_type: (_) =>
      token(
        choice(...data.types.primitives, data.types.unit, new RegExp(data.types.simdTypeRegex)),
      ),

    generic_type: ($) =>
      seq(
        field('name', choice($.type_identifier, $.scoped_type_identifier)),
        field('type_arguments', $.type_arguments),
      ),

    type_arguments: ($) => seq(token(prec(1, '<')), commaSep1($._type), '>'),

    // `[i32; 4]`, `[RawPtr<u8>; 2]`
    type_identifier: (_) => token(/[A-Z][a-zA-Z0-9_]*/),

    // ---- statements -------------------------------------------------------
    block: ($) => seq('{', repeat($._statement), '}'),

    // `if` and `match` are values in Beans, so they reach statement position
    // through `expression_statement` rather than having a second rule each.
    _statement: ($) =>
      choice(
        $.variable_declaration,
        $.assignment_statement,
        $.return_statement,
        $.break_statement,
        $.continue_statement,
        $.defer_statement,
        $.for_statement,
        $.unsafe_block,
        $.brew_statement,
        $.expression_statement,
      ),

    // Only `pub`: a local takes no other modifier, and letting more in here
    // would make `var packed: Bytes` lex `packed` as a keyword.
    // `const NAME: T = <expr>` is module level and has no storage: the
    // checker folds the initializer and every use is that value. `const` is
    // contextual — a declaration word only in `const <NAME>`, an ordinary
    // identifier everywhere else — so the type and the value are both
    // required here, which is what makes the shape unambiguous.
    variable_declaration: ($) =>
      seq(
        optional($.visibility_modifier),
        field('kind', choice('let', 'var')),
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        optional(seq('=', field('value', choice($._expression, $.brew_expression)))),
      ),

    // `brew f(args)` starts the call on a child fiber of the current scope.
    // Contextual, and deliberately not part of `_expression`: the compiler
    // takes it only as a statement or a `let`/`var` initializer — "a Brew
    // handle is scope-bound, so it cannot ride inside a larger expression".
    // The keyword comes from the external scanner, which emits it only when
    // a call really follows, so `group.brew(...)`, `var brew: int = 5` and
    // `brew = brew + 1` all stay ordinary names, exactly as the compiler
    // reads them.
    brew_statement: ($) => $.brew_expression,

    // prec.right so a postfix chain finishes before the reduce: `brew f(a)(b)`
    // brews the whole call, not `f(a)` with a stray call after it.
    brew_expression: ($) =>
      prec.right(seq($.brew_keyword, field('call', $.call_expression))),

    assignment_statement: ($) =>
      seq(
        field('left', $._expression),
        field('operator', choice(...data.operators.assignment)),
        field('right', $._expression),
      ),

    // Greedy: `return` takes the rest of the line. Without newline tokens the
    // parser cannot otherwise tell `return (x)` from a bare `return` followed
    // by a parenthesized statement — a shape Beans code never has.
    return_statement: ($) =>
      prec.right(seq('return', optional(field('value', $._expression)))),
    expression_statement: ($) => $._expression,

    // ---- expressions ------------------------------------------------------
    _expression: ($) =>
      choice(
        $.identifier,
        $.type_identifier,
        $.self_expression,
        $.super_expression,
        $.integer_literal,
        $.float_literal,
        $.boolean_literal,
        $.string_literal,
        $.raw_string_literal,
        $.list_literal,
        $.map_literal,
        $.struct_literal,
        $.parenthesized_expression,
        $.unary_expression,
        $.binary_expression,
        $.range_expression,
        $.cast_expression,
        $.call_expression,
        $.field_expression,
        $.index_expression,
        $.try_expression,
        $.new_expression,
        $.layout_expression,
        $.lambda_expression,
        $.if_expression,
        $.match_expression,
      ),

    super_expression: (_) => 'super',

    binary_expression: ($) => {
      const levels = [
        [PREC.or, ['||']],
        [PREC.and, ['&&']],
        [PREC.equality, ['==', '!=']],
        [PREC.comparison, ['<', '<=', '>', '>=']],
        [PREC.bitor, ['|']],
        [PREC.bitxor, ['^']],
        [PREC.bitand, ['&']],
        [PREC.shift, ['<<', '>>']],
        [PREC.additive, ['+', '-']],
        [PREC.multiplicative, ['*', '/', '%']],
      ];
      return choice(
        ...levels.flatMap(([precedence, operators]) =>
          operators.map((operator) =>
            prec.left(
              precedence,
              seq(
                field('left', $._expression),
                field('operator', operator),
                field('right', $._expression),
              ),
            ),
          ),
        ),
      );
    },

    // Non-associative, above `||`, exactly like Parser::parse_expr.
    call_expression: ($) =>
      prec(
        PREC.postfix,
        seq(field('function', $._expression), field('arguments', $.argument_list)),
      ),

    argument_list: ($) => seq('(', optional(commaList($._expression)), ')'),

    field_expression: ($) =>
      prec(
        PREC.postfix,
        seq(field('object', $._expression), '.', field('field', $.identifier)),
      ),

    new_expression: ($) =>
      prec.right(
        seq(
          'new',
          field('type', choice($.generic_type, $.type_identifier, $.scoped_type_identifier)),
          optional(field('arguments', $.argument_list)),
        ),
      ),

    // size_of(T) / align_of(T) / offset_of(T, field) take a *type*, so they
    // cannot be ordinary calls. Contextual: special only right before `(`.
    if_expression: ($) =>
      prec.right(
        seq(
          'if',
          field('condition', $._expression),
          field('consequence', $.block),
          optional(seq('else', field('alternative', choice($.block, $.if_expression)))),
        ),
      ),

    boolean_literal: (_) => choice('true', 'false'),

    integer_literal: (_) =>
      token(
        choice(
          /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
          /0[bB][01][01_]*/,
          /[0-9][0-9_]*/,
        ),
      ),

    // `0..10` is a range, so a fraction always needs a digit after the dot.
    string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $.escape_sequence,
            $._invalid_escape,
            $.interpolation,
            $._string_content,
          ),
        ),
        '"',
      ),

    // A bare `}` is ordinary text — the lexer only ever tracks `{` depth, so
    // `"}"` and `"kind == \"}\""` are strings, not broken interpolations.
    _string_content: (_) => token.immediate(prec(1, /[^"\\{]+/)),

    // `\xNN` is one raw byte and `\u{...}` one codepoint. Both carry their
    // digits, so a half-written `\x1` is not an escape — it is the mistake
    // the compiler's lexer names.
    _invalid_escape: (_) => token.immediate(/\\./),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,
  },
});
