tree-sitter-beans/test/corpus/async.txt
================================================================================
async fn declares an async function
================================================================================

async fn watcher(fd: int) -> int {
    return 0
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (async_modifier)
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (primitive_type)))
    (primitive_type)
    (block
      (return_statement
        (integer_literal)))))

================================================================================
async follows the ordinary modifiers
================================================================================

pub async fn fetch() -> int { return 1 }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (visibility_modifier)
    (async_modifier)
    (identifier)
    (parameter_list)
    (primitive_type)
    (block
      (return_statement
        (integer_literal)))))

================================================================================
A method may be async
================================================================================

class Reactor {
    pub async fn poll() -> bool { return true }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (type_identifier)
    (declaration_body
      (function_declaration
        (visibility_modifier)
        (async_modifier)
        (identifier)
        (parameter_list)
        (primitive_type)
        (block
          (return_statement
            (boolean_literal)))))))

================================================================================
await takes an expression
================================================================================

async fn run(fd: int) -> int {
    let woke: bool = await net.await_readable(fd)
    return if woke { 1 } else { 0 }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (async_modifier)
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (primitive_type)))
    (primitive_type)
    (block
      (variable_declaration
        (identifier)
        (primitive_type)
        (await_expression
          (await_operator)
          (call_expression
            (field_expression
              (identifier)
              (identifier))
            (argument_list
              (identifier)))))
      (return_statement
        (if_expression
          (identifier)
          (block
            (expression_statement
              (integer_literal)))
          (block
            (expression_statement
              (integer_literal))))))))

================================================================================
async let starts a child task, and await collects it
================================================================================

async fn both(a: int, b: int) -> int {
    async let left: int = work(a)
    async let right: int = work(b)
    return await left + await right
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (async_modifier)
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (primitive_type))
      (parameter
        (identifier)
        (primitive_type)))
    (primitive_type)
    (block
      (variable_declaration
        (async_modifier)
        (identifier)
        (primitive_type)
        (call_expression
          (identifier)
          (argument_list
            (identifier))))
      (variable_declaration
        (async_modifier)
        (identifier)
        (primitive_type)
        (call_expression
          (identifier)
          (argument_list
            (identifier))))
      (return_statement
        (binary_expression
          (await_expression
            (await_operator)
            (identifier))
          (await_expression
            (await_operator)
            (identifier)))))))

================================================================================
await binds tighter than a binary operator and looser than a call
================================================================================

async fn total() -> int {
    return await count() + 1
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (async_modifier)
    (identifier)
    (parameter_list)
    (primitive_type)
    (block
      (return_statement
        (binary_expression
          (await_expression
            (await_operator)
            (call_expression
              (identifier)
              (argument_list)))
          (integer_literal))))))

================================================================================
async is an ordinary name away from fn and let
================================================================================

class Job {
    async: int
    await: bool
}

fn run(async: int, await: bool) -> int {
    var awaited: bool = await
    async = async + 1
    return async
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (type_identifier)
    (declaration_body
      (field_declaration
        (identifier)
        (primitive_type))
      (field_declaration
        (identifier)
        (primitive_type))))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (primitive_type))
      (parameter
        (identifier)
        (primitive_type)))
    (primitive_type)
    (block
      (variable_declaration
        (identifier)
        (primitive_type)
        (identifier))
      (assignment_statement
        (identifier)
        (binary_expression
          (identifier)
          (integer_literal)))
      (return_statement
        (identifier)))))

================================================================================
await is an ordinary name when no operand follows
================================================================================

fn drain(await: bool) -> bool {
    await = false
    return await
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (primitive_type)))
    (primitive_type)
    (block
      (assignment_statement
        (identifier)
        (boolean_literal))
      (return_statement
        (identifier)))))
